--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -198,21 +198,23 @@
                                 </GroupStyle>
                             </DataGrid.GroupStyle>
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="序号" Width="80" Binding="{Binding Path=Code}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="组名" Width="80" Binding="{Binding Path=GroupName}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="样品名" Width="80" Binding="{Binding Path=SampleName}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="序号" Width="80" Binding="{Binding Path=Code,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="组名" Width="80" Binding="{Binding Path=GroupName,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="样品名" Width="80" Binding="{Binding Path=SampleName,Mode=TwoWay}"></DataGridTextColumn>
                                 <DataGridTextColumn x:Name="standardAirDensityCol" Header="汞浓度ng/mL" Width="80" Binding="{Binding Path=Density,Mode=TwoWay}" Visibility="Hidden" ></DataGridTextColumn>
-                                <DataGridTextColumn Header="响应值" Width="80" Binding="{Binding Path=ResponseValue1}"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="standardAirSampleTimeCol" Header="取样时间m" Width="90" Binding="{Binding AirSampleTime}"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="standardAirFluentCol" Header="流量L/m" Width="80" Binding="{Binding AirFluent}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="温度" Width="80" Binding="{Binding Temperature}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="样品质量" Width="80" Binding="{Binding Path=Weight}"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="standardProviderCol" Header="样品供应商" Width="80" Binding="{Binding Path=ProviderCompany}" Visibility="Hidden"></DataGridTextColumn>
-                                <DataGridTextColumn x:Name="standardPlaceCol"  Header="产地" Width="80" Binding="{Binding Path=Place}" Visibility="Hidden"></DataGridTextColumn>
-                                <DataGridTextColumn Header="样品购买日期" Width="80" Binding="{Binding Path=BuyDate}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="斜率" Width="80" Binding="{Binding Path=A}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="截距" Width="80" Binding="{Binding Path=B}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="相关系数" Width="80" Binding="{Binding Path=R}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="响应值" Width="80" Binding="{Binding Path=ResponseValue1,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="standardAirSampleTimeCol" Header="取样时间m" Width="90" Binding="{Binding AirSampleTime,Mode=TwoWay}" Visibility="Hidden"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="standardAirFluentCol" Header="流量L/m" Width="80" Binding="{Binding AirFluent,Mode=TwoWay}" Visibility="Hidden"></DataGridTextColumn>
+                                <DataGridTextColumn Header="温度" Width="80" Binding="{Binding Temperature,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="标样体积mL" Width="80" Binding="{Binding AirML,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="汞量ng" Width="80" Binding="{Binding AirG,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="样品质量" Width="80" Binding="{Binding Path=Weight,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="standardProviderCol" Header="样品供应商" Width="80" Binding="{Binding Path=ProviderCompany,Mode=TwoWay}" Visibility="Hidden"></DataGridTextColumn>
+                                <DataGridTextColumn x:Name="standardPlaceCol"  Header="产地" Width="80" Binding="{Binding Path=Place,Mode=TwoWay}" Visibility="Hidden"></DataGridTextColumn>
+                                <DataGridTextColumn Header="样品购买日期" Width="80" Binding="{Binding Path=BuyDate,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="斜率" Width="80" Binding="{Binding Path=A,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="截距" Width="80" Binding="{Binding Path=B,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="相关系数" Width="80" Binding="{Binding Path=R,Mode=TwoWay}"></DataGridTextColumn>
                             </DataGrid.Columns>
                         </DataGrid>
                     </StackPanel>
