--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -8,8 +8,9 @@
         xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:SilverTest"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="MainWindow" Height="910" Width="1000" Loaded="window_Loaded" WindowStartupLocation="CenterScreen">
+        Title="QM201H" Height="810" Width="1000" Loaded="window_Loaded" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <XmlDataProvider IsAsynchronous="False" x:Key="standardSampleData" Source="/resources/StandardSamples_Table.xml" XPath="/StandardSamples/StandardSample"/>
         <XmlDataProvider IsAsynchronous="False" x:Key="newTargetData" Source="/resources/NewTestTarget_Table.xml" XPath="/NewTestTargets/NewTestTarget"/>
@@ -27,6 +28,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <System:DateTime x:Key="current"></System:DateTime>
     </Window.Resources>
     <Grid x:Name="grid">
         <DockPanel x:Name="dockPanel" HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=grid, Mode=OneWay}" LastChildFill="False" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" Margin="0,0,0,-61">
@@ -75,7 +77,7 @@
                     <MenuItem x:Name="saveDotsMenu" Header="保存Dots" Checked="saveDotsMenu_Checked" Click="saveDotsMenu_Click"></MenuItem>
                     <MenuItem x:Name="saveRawTextMenu" Header="保存rawtext" Click="saveRawTextMenu_Click"></MenuItem>
                     <MenuItem x:Name="sendTextMenu" Header="发送模拟数据" Click="sendTextMenu_Click" ></MenuItem>
-                </MenuItem>                
+                </MenuItem>
             </Menu>
             <Separator DockPanel.Dock="Top" Height="3" Margin="0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"/>
             <ToolBarTray x:Name="toolBarTray" Height="32" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" DockPanel.Dock="Top">
@@ -95,14 +97,20 @@
                         <Image Source="images\excel.png">
 
                         </Image>
-                    </Button>                    
-                    <Button x:Name="printRbtn" ToolTip="打印R图" VerticalAlignment="Top" Height="30" Visibility="Collapsed">
+                    </Button>
+                    <Button x:Name="exportDotsBtn" ToolTip="输出点值" VerticalAlignment="Top" Height="30" Click="exportDotsBtn_Click">
+                        <Image Source="images\exportraw.png">
+
+                        </Image>
+                    </Button>
+                    <Button x:Name="printRbtn" ToolTip="打印R图" VerticalAlignment="Top" Height="30" Visibility="Collapsed" Click="printRbtn_Click">
                         <Image Source="images\print.png">
 
                         </Image>
                     </Button>
                 </ToolBar>
             </ToolBarTray>
+            <Separator DockPanel.Dock="Top" Height="3" Margin="0" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"/>
             <!--
             <d3:Chart Visibility="Hidden" Name="plotter" DockPanel.Dock="Top" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" Height="200">
                 <d3:Chart.Title>
@@ -111,7 +119,7 @@
                 <d3:LineGraph x:Name="linegraph" Description="Simple linegraph" Stroke="Blue" StrokeThickness="3"/>
             </d3:Chart>
             -->
-            <dw:ChartPlotter x:Name="realCpt" Height="200" DockPanel.Dock="Top" Margin="10,10,20,10"></dw:ChartPlotter>
+
             <TabControl x:Name="sampletab" DockPanel.Dock="Top" SelectionChanged="sampletab_SelectionChanged">
                 <TabItem x:Name="newtabitem" Selector.Selected="OnNewTabSelected">
                     <TabItem.Header>
@@ -122,7 +130,7 @@
                     </TabItem.Header>
                     <StackPanel>
 
-                        <DataGrid x:Name="NewTargetDgd" Height="245" DockPanel.Dock="Top" 
+                        <DataGrid x:Name="NewTargetDgd" Height="300" DockPanel.Dock="Top" 
                                   Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" 
                                   CanUserAddRows="False"
                                   ItemsSource="{Binding}"  
@@ -143,12 +151,14 @@
                                 <DataGridTextColumn x:Name="newLiquidBulkCol"  Header="样品消化液总体积ml" Width="80" Visibility="Hidden"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品总体积L" Binding="{Binding AirTotolBulk,Mode=TwoWay}" Width="80"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品中汞含量mg/m3" Binding="{Binding AirG,Mode=TwoWay}" Width="80"></DataGridTextColumn>
-                                <DataGridTemplateColumn Header="选择标样">
+                                <DataGridTemplateColumn Header="选择标样" Width="*">
                                     <DataGridTemplateColumn.CellTemplate >
                                         <DataTemplate>
                                             <ComboBox x:Name="standardCmb" SelectionChanged="standardCmb_SelectionChanged" 
                                                       ItemsSource="{Binding ItemsSource, ElementName=standardSampleDgd}"
                                                       DisplayMemberPath="GroupName" SelectedValuePath="Code"
+                                                      Width="100"
+                                                      HorizontalAlignment="Left"
                                                       SelectedValue="{Binding SampleName}">
                                             </ComboBox>
                                         </DataTemplate>
@@ -177,7 +187,7 @@
                 </TabItem>
                 <TabItem Selector.Selected="OnStandardTabSelected" x:Name="standardtabitem" Header="标样测试">
                     <StackPanel>
-                        <DataGrid x:Name="standardSampleDgd" Height="245" DockPanel.Dock="Top" 
+                        <DataGrid x:Name="standardSampleDgd" Height="300" DockPanel.Dock="Top" 
                                   Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" 
                                   ItemsSource="{Binding}"
                                   CanUserAddRows="False"
@@ -208,25 +218,49 @@
                                 <DataGridTextColumn Header="样品购买日期" Width="80" Binding="{Binding Path=BuyDate,Mode=TwoWay}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="斜率" Width="80" Binding="{Binding Path=A,Mode=TwoWay}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="截距" Width="80" Binding="{Binding Path=B,Mode=TwoWay}"></DataGridTextColumn>
-                                <DataGridTextColumn Header="相关系数" Width="80" Binding="{Binding Path=R,Mode=TwoWay}"></DataGridTextColumn>
+                                <DataGridTextColumn Header="相关系数" Width="*" Binding="{Binding Path=R,Mode=TwoWay}"></DataGridTextColumn>
                             </DataGrid.Columns>
                         </DataGrid>
                     </StackPanel>
                 </TabItem>
             </TabControl>
+            <StackPanel x:Name="waveContainer" Margin="0,20" DockPanel.Dock="Top" Orientation="Horizontal">
+                <dw:ChartPlotter x:Name="realCpt" Width="400" Height="200" DockPanel.Dock="Top" Margin="10,10,20,10"></dw:ChartPlotter>
+                <GroupBox x:Name="paramGbx" Header="y = ax + b"  Height="200" Width="500" Margin="40,0,0,0">
+                    <GroupBox.Background>
+                        <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
+                    </GroupBox.Background>
+                    <DockPanel HorizontalAlignment="Left" Height="150" LastChildFill="False" Margin="0,0,0,0" VerticalAlignment="Top" Width="480">
+                        <Grid DockPanel.Dock="Top" Height="50">
+                            <Label Content="截距" HorizontalAlignment="Left" Margin="173,13,0,10" RenderTransformOrigin="0.647,0.037"/>
+                            <TextBlock x:Name="bTxb" Height="30" TextWrapping="Wrap" Text="" Margin="254,10,106,10" DockPanel.Dock="Top" Width="120" Background="White"/>
+                        </Grid>
+                        <Grid Height="50" DockPanel.Dock="Top">
+                            <Label Content="斜率" HorizontalAlignment="Left" Margin="176,12,0,13" VerticalAlignment="Center"/>
+                            <TextBlock x:Name="aTxb" Height="30" TextWrapping="Wrap" Margin="254,12,102,8" VerticalAlignment="Center" Width="120" Background="White"/>
+                        </Grid>
+                        <Grid Height="50" DockPanel.Dock="Top">
+                            <Label Content="相关系数" HorizontalAlignment="Left" Margin="153,10,0,15" VerticalAlignment="Center"/>
+                            <TextBlock x:Name="rTxt" Height="30" TextWrapping="Wrap" Text="" Margin="254,10,101,10" VerticalAlignment="Center" Width="120" Background="White"/>
+                        </Grid>
+                    </DockPanel>
+                </GroupBox>
+            </StackPanel>
+            <Separator Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" Height="3" DockPanel.Dock="Top"></Separator>
             <DockPanel DockPanel.Dock="Top" Height="50">
-                <Button x:Name="modifyBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="保存" Margin="20,1,0,0" Click="modifyBtn_Click"  Visibility="Collapsed"/>
-                <Button x:Name="exportexelBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="输出excel" Margin="20,1,0,0" Click="exportexelBtn_Click" Visibility="Collapsed"/>
-                <Button x:Name="startTestBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="开始测试" Margin="20,1,0,0" Click="startTestBtn_Click" />
-                <Button x:Name="RBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="计算相关系数" Margin="20,1,0,0" Click="RBtn_Click" Visibility="Hidden" />
-                <Button x:Name="testBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Content="开发" Margin="20,1,0,0" Height="20" Width="75" Click="testBtn_Click" Visibility="Hidden"/>
-                <Button x:Name="debugBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Content="停止发送" Margin="20,1,0,0" Height="20" Width="75" Click="debugBtn_Click" Visibility="Hidden"/>
-                <Button x:Name="AddRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Height="20" Padding="1" Margin="0,1,20,0"  Content="增加" Click="AddRowBtn_Click" />
-                <Button x:Name="DelRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Height="20" Content="删除" Margin="0,1,20,0" Click="DelRowBtn_Click" />
-                
+                <Button x:Name="modifyBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="30" Content="保存" Margin="20,1,0,0" Click="modifyBtn_Click"  Visibility="Collapsed"/>
+                <Button x:Name="exportexelBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="30" Content="输出excel" Margin="20,1,0,0" Click="exportexelBtn_Click" Visibility="Collapsed"/>
+                <Button x:Name="RBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="30" Content="计算相关系数" Margin="20,1,0,0" Click="RBtn_Click" Visibility="Hidden" />
+                <Button x:Name="testBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Content="开发" Margin="20,1,0,0" Height="30" Width="50" Click="testBtn_Click" Visibility="Hidden"/>
+                <Button x:Name="debugBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Content="停止发送" Margin="20,1,0,0" Height="20" Width="50" Click="debugBtn_Click" Visibility="Hidden"/>
+                <Button x:Name="exitBtn" Content="退出" DockPanel.Dock="Right" Width="50" Height="30" Margin="0,0,25,0" Click="exitBtn_Click"/>
+                <Button x:Name="AddRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Width="50" Height="30" Padding="1" Margin="0,1,20,0"  Content="增加" Click="AddRowBtn_Click" />
+                <Button x:Name="DelRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Width="50" Height="30" Content="删除" Margin="0,1,20,0" Click="DelRowBtn_Click" />
+                <Button x:Name="startTestBtn" Width="50" DockPanel.Dock="Right" HorizontalAlignment="Right" Height="30" Content="开始测试" Margin="0,1,60,0" Click="startTestBtn_Click" />
             </DockPanel>
+
             <StackPanel  DockPanel.Dock="Top" Height="50" Orientation="Vertical">
-                <Border x:Name="AnimatedColorButton" Width="48" Height="48" BorderThickness="2" BorderBrush="Red" CornerRadius="50" Visibility="Hidden">
+                <Border x:Name="AnimatedColorButton" Width="48" Height="48" BorderThickness="5" BorderBrush="Gold" CornerRadius="50" Visibility="Hidden">
                     <Border.Triggers>
                         <EventTrigger RoutedEvent="Border.Loaded">
                             <BeginStoryboard>
@@ -244,7 +278,7 @@
                     <!--
                     <Button x:Name="statusBtn" Visibility="Hidden">测试中</Button>
                     -->
-                    
+
                     <Button x:Name="statusBtn" Visibility="Hidden" Cursor="Hand" Opacity="1" Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="2" Foreground="#FF7C7C03">
                         <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
@@ -252,7 +286,7 @@
                                     <Border.Background>
                                         <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                                             <GradientStop Color="White" Offset="0.0" />
-                                            <GradientStop Color="Silver" Offset="0.5" />
+                                            <GradientStop Color="Red" Offset="0.5" />
                                             <GradientStop Color="White" Offset="0.0" />
                                         </LinearGradientBrush>
                                     </Border.Background>
@@ -263,45 +297,27 @@
                     </Button>
                 </Border>
             </StackPanel>
-            <StackPanel Visibility="Collapsed" x:Name="Rstackpanel" DockPanel.Dock="Top" Width="600" Height="300" Orientation="Horizontal">
-                <Canvas x:Name="rCanvas" Width="450" Height="300" Background="#FFDCD9D9" ClipToBounds="True"/>
+            <StackPanel Visibility="Collapsed" x:Name="Rstackpanel" DockPanel.Dock="Top" 
+                        Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" 
+                        Height="300" Orientation="Horizontal" Background="AliceBlue" >
+                <Canvas x:Name="rCanvas" HorizontalAlignment="Center" Width="450" Height="300" Background="#FFDCD9D9" ClipToBounds="True"/>
                 <!--<StackPanel  Width="200" Height="300">
                    <TextBlock x:Name="RparamSpTxbl" Width="150" Height="300"></TextBlock>
                 </StackPanel> -->
             </StackPanel>
-            
-            <GroupBox x:Name="paramGbx" Header="y = ax + b" Height="100" DockPanel.Dock="Top" Margin="0,2,308,0">
-                <GroupBox.Background>
-                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
-                </GroupBox.Background>
-                <DockPanel HorizontalAlignment="Left" Height="90" LastChildFill="False" Margin="0,0,-2,-12" VerticalAlignment="Top" Width="674">
-                    <Label Content="截距" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center"/>
-                    <TextBox x:Name="bTxb" Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
-                    <Label Content="斜率" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center"/>
-                    <TextBox x:Name="aTxb" Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
-                    <Label Content="相关系数" HorizontalAlignment="Left" Margin="40,0,0,0" VerticalAlignment="Center"/>
-                    <TextBox x:Name="rTxt" Height="30" TextWrapping="Wrap" Text="" Margin="10,0,0,0" VerticalAlignment="Center" Width="120"/>
-                </DockPanel>
 
-
-
-            </GroupBox>
-
-            <DockPanel DockPanel.Dock="Top" Height="90" LastChildFill="False" Width="{Binding ElementName=dockPanel, Mode=OneWay}">
-                <Button x:Name="exitBtn" Content="退出" DockPanel.Dock="Right" Width="75" Margin="0,10,40,25" RenderTransformOrigin="1,0" Click="exitBtn_Click"/>
-            </DockPanel>
-            <StatusBar Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" Height="35" 
-                       DockPanel.Dock="Bottom">
+            <StatusBar Height="30" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}"
+                       DockPanel.Dock="Bottom" RenderTransformOrigin="0.503,0.033">
                 <StatusBarItem>
-                    <TextBlock Text="状态"></TextBlock>
+                    <TextBlock Text="{Binding Now.Year, Mode=OneWay, Source={StaticResource current}}"></TextBlock>
                 </StatusBarItem>
-                <Separator/>
+                
                 <StatusBarItem>
-                    <TextBlock Text="2018-5-22"></TextBlock>
+                    <TextBlock Text="{Binding Now.Month, Mode=OneWay, Source={StaticResource current}}"></TextBlock>
                 </StatusBarItem>
-                <Separator/>
+                
                 <StatusBarItem>
-                    <TextBlock Text="11：30"></TextBlock>
+                    <TextBlock Text="{Binding Now.Day, Mode=OneWay, Source={StaticResource current}}"></TextBlock>
                 </StatusBarItem>
             </StatusBar>
         </DockPanel>
